[gd_scene load_steps=5 format=3 uid="uid://b2efopsgt0jt5"]

[ext_resource type="Texture2D" uid="uid://c4lli1gftnbcr" path="res://assets/ui/panel_beige.png" id="1_6qni7"]
[ext_resource type="LabelSettings" uid="uid://bb0n1xepdofar" path="res://Resources/White_48_font.tres" id="2_1224t"]
[ext_resource type="Script" uid="uid://8548ekuo3a0b" path="res://Scenes/LevelButton.gd" id="2_f78ji"]
[ext_resource type="LabelSettings" uid="uid://bue1q2ufrgsgb" path="res://Resources/White_32_font.tres" id="3_f78ji"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_6qni7")
script = ExtResource("2_f78ji")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_1224t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1000"
label_settings = ExtResource("3_f78ji")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
